# oi

./: .gitignore  CMakeLists.txt  README.MD  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5gilb7mgp7vpa2af8f5nnw0x9zv7h0lg-source
codeforces/: 1030A.cpp  110A.cpp  112A.cpp  1154A.cpp  116A.cpp  118A.cpp  122A.cpp  131A.cpp  1328A.cpp  1335A.cpp  133A.cpp  1352A.cpp  136A.cpp  141A.cpp  144A.cpp  148A.cpp  151A.cpp  155A.cpp  158A.cpp  158B.cpp  160A.cpp  1703A.cpp  1742A.cpp  1A.cpp  200B.cpp  208A.cpp  2167A.cpp  2167B.cpp  2167C.cpp  2167D.cpp  2183A.cpp  2193A.cpp  2193B.cpp  2193C.cpp  2193D.cpp  228A.cpp  230A.cpp  230B.cpp  231A.cpp  236A.cpp  (+46 more)
leetcode/: 1137.cpp  115.cpp  120.cpp  1289.cpp  139.cpp  198.cpp  221.cpp  3.cpp  5.cpp  509.cpp  516.cpp  518.cpp  62.cpp  63.cpp  64.cpp  70.cpp  72.cpp  740.cpp  746.cpp  91.cpp  931.cpp
luogu/: B2005.cpp  B3612.cpp  B3621.cpp  B3622.cpp  B3623.cpp  B3670.cpp  B3693.cpp  B4158.cpp  P1002.cpp  P1009.cpp  P1010.cpp  P1036.cpp  P10385.cpp  P10386.cpp  P1042.cpp  P10424.cpp  P1045.cpp  P1047.cpp  P1055.cpp  P1059.cpp  P1065.cpp  P1067.cpp  P1068.cpp  P10899.cpp  P10906.cpp  P1093.cpp  P1098.cpp  P10984.cpp  P10985.cpp  P1101.cpp  P1102.cpp  P1116.cpp  P1125.cpp  P1135.cpp  P1152.cpp  P1161.cpp  P1162.cpp  P1164.cpp  P1177.cpp  P1200.cpp  (+119 more)
pintia/天梯赛练习集/: L1-006.cpp  L1-007.cpp  L1-008.cpp  L1-009.cpp  L1-010.cpp  L1-011.cpp  L1-016.cpp
practice/: 2.py  3.py  async.cpp  dp_back.cpp  fibonacci.cpp  fibonacci_template.cpp  file.c  fp.cpp  high_precision.cpp  posix_mq.c  queens.cpp  random.cpp  sth.cpp  struct.c  swap.c  template.cpp
university/: array.c  factorial.c  string.c
